# AttendanceAccounting

./: .env.sample  .gitignore  README.md  docker-compose.yaml  pyproject.toml
app/: main.py  utils.py
app/config/: __init__.py  settings.py
app/config/db/: __init__.py  setup.py
app/config/db/models/: __init__.py  time_search.py
app/tests/: conftest.py  test_utils.py
app/time_filter/: __init__.py  dependencies.py  responses.py  schemas.py  views.py
docker/fast_api/: Dockerfile
